--- a/style.css
+++ b/style.css
@@ -21,3 +21,20 @@
     margin: 0 16px;
     font-size: 24px;
 }
+
+.livro-imagem{
+    width: 25%;
+}
+
+.os-teus-olhos{
+    width: 20%;
+}
+
+.o-jardim-secreto{
+    width: 30%;
+}
+
+.texto-site{
+    width: 25%;
+
+}
